# AI-TREND-RADAR-RAG

./: .env.example  .gitignore  CLAUDE.md  README.md  README.zh.md  config.yml  docker-compose.yml  feed.xml  go.mod  index.html  manifest.json  package.json
.claude/: settings.local.json
.github/workflows/: daily-digest.yml  deploy-pages.yml  monthly-digest.yml  weekly-digest.yml
di/: container.go
digests/: search-index.json  web-state.json
digests/2026-05-20/: ai-agents-en.md  ai-agents.md  ai-arxiv-en.md  ai-arxiv.md  ai-cli-en.md  ai-cli.md  ai-community-en.md  ai-community.md  ai-hf-en.md  (+10 more)
docs/: configuration.zh.md  getting-started.zh.md
mcp/: package-lock.json  package.json  wrangler.toml
rag/: README.md  __init__.py  config.py  ingest.py  pyproject.toml  requirements.txt  server.py
rag/agent/: __init__.py  agent.py  chains.py  prompts.py  tools.py
rag/graphrag/: __init__.py  builder.py  driver.py  schema.py
rag/retriever/: __init__.py  composable_retriever.py  hybrid.py  hybrid_retriever.py  typed_queries.py  vector_store.py
rag/tests/: test_agent.py  test_config.py  test_hybrid.py  test_ingest.py  test_retriever.py  test_tools.py
rag/web/: __init__.py  chat.html
scripts/: regen-highlights.ts
src/: arxiv.ts  china-sources.ts  config.ts  devto.ts  feishu.ts  generate-manifest.ts  gitee.ts  github.ts  hf.ts  hn.ts  i18n.ts  index.ts  infoq-cn.ts  juejin.ts  kr36.ts  lobsters.ts  notify.ts  options.ts  oschina.ts  ph.ts  prompts-data.ts  report-savers.ts  report.ts  rollup.ts  rss-utils.ts  social.ts  topic-radar.ts  trending.ts  web.ts
(+63 files in other folders)
